# LLM_Learn-0-30-days

./: .gitignore  README.md  pyproject.toml
day-01/: CLI.md  rag_example.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb
day-01/query-translation/: decomposition.md  hyde.md  multi_query.md  rag_fusion.md  step_back.md
day-02/: note.md
day-02/Langchain实现RAG/: Langchain-RAG.ipynb  rag.py  requirements.txt
day-02/LlamaIndex实现RAG/: LlamaIndex-RAG.ipynb
day-03/: FAISS 三种向量检索方式学习.md
day-04/ReAct/: ReAct-Agent.ipynb  ReAct.md  ai-coding-prompt.md
