[project]
name = "llmlearn"
version = "0.1.0"
description = "从零开始的大模型复习生活"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.7.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
